[gd_scene load_steps=16 format=3 uid="uid://botq6bh3oqpte"]

[ext_resource type="Script" path="res://Scripts/Char.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://dr6fdg70dih4v" path="res://Animations/Char-1/RUN2.png" id="2"]
[ext_resource type="Texture2D" uid="uid://cpwfq377gvek2" path="res://Animations/Char-1/IDLE2.png" id="3"]
[ext_resource type="Texture2D" uid="uid://cskywioa8ok02" path="res://Animations/Char-1/RUN1.png" id="4"]
[ext_resource type="Texture2D" uid="uid://bd606nebarikc" path="res://Animations/Char-1/IDLE1.png" id="5"]
[ext_resource type="Texture2D" uid="uid://clhksgeqr1yvt" path="res://Images/weapons/PISTOL.png" id="6"]
[ext_resource type="Texture2D" uid="uid://2xcjr12j717d" path="res://Images/Texture_progress/under.png" id="7"]
[ext_resource type="Texture2D" uid="uid://ce3ao7qb4eedr" path="res://Images/Texture_progress/over.png" id="8"]
[ext_resource type="Texture2D" uid="uid://dijff3yx418eb" path="res://Images/Texture_progress/progress.png" id="9"]

[sub_resource type="StyleBoxFlat" id="4"]
bg_color = Color(0.447059, 0.027451, 0.00784314, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 0)

[sub_resource type="StyleBoxFlat" id="5"]
bg_color = Color(0.0901961, 0.0901961, 0.0901961, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="6"]
bg_color = Color(0.0431373, 0.0941176, 0.419608, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 0)

[sub_resource type="StyleBoxFlat" id="7"]
bg_color = Color(0.0901961, 0.0901961, 0.0901961, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)

[sub_resource type="SpriteFrames" id="3"]
animations = [{
"frames": [ExtResource( "5" ), ExtResource( "3" )],
"loop": true,
"name": &"IDLE",
"speed": 5.0
}, {
"frames": [ExtResource( "4" ), ExtResource( "2" )],
"loop": true,
"name": &"RUN",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="8"]
size = Vector2(8, 16)

[node name="Char" type="CharacterBody2D" groups=["CHAR"]]
z_index = 1
script = ExtResource( "1" )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2(0.5, 0.5)

[node name="GUI" type="Node2D" parent="Camera2D"]
z_index = 5

[node name="GridContainer" type="GridContainer" parent="Camera2D/GUI"]
offset_left = -104.0
offset_top = 104.0
offset_right = 104.0
offset_bottom = 136.0
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="THROWABLES" type="GridContainer" parent="Camera2D/GUI"]
offset_left = -248.0
offset_top = 104.0
offset_right = -104.0
offset_bottom = 136.0
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PENT" type="Label" parent="Camera2D/GUI"]
offset_left = 192.0
offset_top = 85.0
offset_right = 201.0
offset_bottom = 111.0
rect_scale = Vector2(2, 2)
size_flags_horizontal = 7
size_flags_vertical = 7
text = "8"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BULLETS" type="Label" parent="Camera2D/GUI"]
offset_left = 213.0
offset_top = 103.0
offset_right = 237.0
offset_bottom = 129.0
size_flags_horizontal = 7
size_flags_vertical = 7
text = "/80"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LIFE_AND_MANA" type="GridContainer" parent="Camera2D/GUI"]
offset_left = -72.0
offset_top = -144.0
offset_right = 72.0
offset_bottom = -124.0
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LIFEBAR" type="ProgressBar" parent="Camera2D/GUI/LIFE_AND_MANA"]
offset_right = 70.0
offset_bottom = 20.0
rect_min_size = Vector2(0, 20)
size_flags_horizontal = 3
size_flags_vertical = 6
theme_override_styles/fg = SubResource( "4" )
theme_override_styles/bg = SubResource( "5" )
percent_visible = false

[node name="Label" type="Label" parent="Camera2D/GUI/LIFE_AND_MANA/LIFEBAR"]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MANABAR" type="ProgressBar" parent="Camera2D/GUI/LIFE_AND_MANA"]
offset_left = 74.0
offset_right = 144.0
offset_bottom = 20.0
rect_min_size = Vector2(0, 20)
size_flags_horizontal = 3
size_flags_vertical = 6
theme_override_styles/fg = SubResource( "6" )
theme_override_styles/bg = SubResource( "7" )
percent_visible = false

[node name="Label" type="Label" parent="Camera2D/GUI/LIFE_AND_MANA/MANABAR"]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="POINTS" type="Label" parent="Camera2D/GUI"]
offset_left = 184.0
offset_top = 40.0
offset_right = 221.0
offset_bottom = 63.0
rect_scale = Vector2(1.5, 1.5)
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FPS" type="Label" parent="Camera2D/GUI"]
offset_left = 184.0
offset_top = -144.0
offset_right = 216.0
offset_bottom = -121.0
rect_scale = Vector2(2, 2)
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimatedSprite" type="AnimatedSprite2D" parent="."]
position = Vector2(1, 0)
frames = SubResource( "3" )
animation = &"RUN"

[node name="TextureProgress" type="TextureProgressBar" parent="AnimatedSprite"]
visible = false
texture_under = ExtResource( "7" )
texture_over = ExtResource( "8" )
texture_progress = ExtResource( "9" )
fill_mode = 4
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 0)
shape = SubResource( "8" )

[node name="ARMA" type="Sprite2D" parent="."]
position = Vector2(0, 1)
z_index = 1
texture = ExtResource( "6" )

[node name="ORIGEM" type="Node2D" parent="ARMA"]
position = Vector2(13, -0.5)
